# template-glib

./: .gitlab-ci.yml  .travis.yml  CONTRIBUTING.md  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  meson.build  meson_options.txt  template-glib.doap
data/: Makefile.am  template-glib-1.0.pc.in
doc/: Makefile.am  meson.build  overview.md  template-glib-docs.sgml  template-glib-sections.txt  template-glib.toml.in  template-glib.types
doc/xml/: meson.build
examples/: Makefile.am  article.tmpl  article.vala  simple-vala.vala  simple.c  simple.js  simple.py  simple.tmpl
po/: LINGUAS  Makevars  POTFILES.in  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fr.po  fur.po  hi.po  hr.po  hu.po  id.po  it.po  ka.po  kab.po  kk.po  kw.po  lt.po  meson.build  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
src/: Makefile.am  main.c  meson.build  template-glib.map  tmpl-branch-node.h  tmpl-debug.h.in  tmpl-enums.c.in  tmpl-enums.h.in  tmpl-error.h  tmpl-expr-eval.c  tmpl-expr-node.c  tmpl-expr-node.h  tmpl-expr-parser-private.h  tmpl-expr-parser.y  tmpl-expr-private.h  tmpl-expr-scanner.c  tmpl-expr-scanner.h  tmpl-expr-scanner.l  tmpl-expr-types.h  tmpl-expr.c  tmpl-expr.h  tmpl-gi-private.h  tmpl-gi.c  tmpl-glib.h  tmpl-iterator.c  tmpl-lexer.c  tmpl-node.c  tmpl-parser.c  tmpl-scope.c  tmpl-scope.h  tmpl-symbol.c  tmpl-symbol.h  tmpl-template-locator.c  tmpl-template.c  tmpl-template.h  tmpl-token-input-stream.c  tmpl-token-private.h  tmpl-token.c  tmpl-util-private.h  tmpl-util.c  (+2 more)
tests/: meson.build  test-expr.c  test-template-test1.tmpl  test-template-test1.tmpl.expected  test-template.c  test1.script
